# ft_ls

./: .gitignore  CMakeLists.txt  Makefile
includes/: ft_defines.h  ft_errors.h  ft_ls.h  ft_ls_defines.h  ft_ls_errors.h  ft_ls_structs.h  ft_structs.h
sources/: args_processor.c  coloring.c  compare_functions.c  dir_tree_getter.c  dir_tree_utils.c  directory_tree_getter.c  error.c  filestruct_functions.c  format_print.c  format_print_utils.c  ft_ls.c  ls_recursive.c  options_parser.c  print_formatted.c  rights_field_getter.c  search_recursive.c  size_print_utils.c  utils.c
